# deep-feature-select

./: .gitignore  EXPERIMENT_PLAN.md  LICENSE  README.md  pyproject.toml
deepfs/: __init__.py
deepfs/core/: __init__.py  base.py  registry.py  types.py  utils.py
deepfs/encoders/: __init__.py  concrete.py  indirect_concrete.py
deepfs/gates/: __init__.py  gumbel_sigmoid.py  gumbel_softmax.py  hard_concrete.py  stochastic.py
deepfs/models/: __init__.py  cae.py  gumbel_sigmoid_gate.py  gumbel_softmax_cae.py  gumbel_softmax_gate.py  gumbel_softmax_ipcae.py  hard_concrete_cae.py  hard_concrete_gate.py  hard_concrete_ipcae.py  ipcae.py  stochastic_cae.py  stochastic_gate.py  stochastic_ipcae.py
deepfs/selectors/: __init__.py  composite.py
deepfs/training/: __init__.py  callbacks.py  trainer.py
docs/en/: API-Reference.md  Algorithms.md  Examples.md  Getting-Started.md  Home.md
docs/zh-CN/: API-Reference.md  Home.md  (+3 more)
exp/: EXPERIMENT_PLAN.md  EXPERIMENT_RESULTS.md  README.md  generate_sklearn_data.py  generate_toy_data.py  inspect_gates.py  moe_toy.py  run_ablation.py  run_baselines.py  run_contrast.py  run_downstream.py  run_experiment.py  run_fair_comparison.py  run_feature_analysis.py  run_feature_evolution.py  run_feature_generalization.py  run_hparam_sweep.py  run_hyperparameter.py  run_quick_test.py  run_sklearn_demo.py  run_stability.py  run_threshold_sweep.py  run_toy_demo.py  run_visualization.py  test_e2e.py  utils.py
exp_cls/: __init__.py  dataset.py  run.sh  run_all_cls.py  run_downstream.py  run_experiment.py  utils.py
tests/: test_all_models.py
(+34 files in other folders)
